Spring project re-import and Database adjustments

--- a/iqueue/src/main/resources/application.properties
+++ b/iqueue/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.datasource.url=${IQUEUE_DB_URL}
+spring.datasource.username=${IQUEUE_DB_USER}
+spring.datasource.password=${IQUEUE_DB_PASSWORD}
