Database enhancement. Data access layer configuration with JdbcTemplate. Language Model, Repository and Controller initial implementation. Postman tests added.

--- a/iqueue/src/main/resources/application.properties
+++ b/iqueue/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.url=${IQUEUE_DB_URL}
 spring.datasource.username=${IQUEUE_DB_USER}
 spring.datasource.password=${IQUEUE_DB_PASSWORD}
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
