--- a/iqueue/src/main/resources/application.properties
+++ b/iqueue/src/main/resources/application.properties
@@ -3,3 +3,9 @@ spring.datasource.url=${IQUEUE_DB_URL}
 spring.datasource.username=${IQUEUE_DB_USER}
 spring.datasource.password=${IQUEUE_DB_PASSWORD}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+
+server.port=8443
+server.ssl.enabled=true
+server.ssl.key-store=classpath:server.jks
+server.ssl.key-store-password=secret
+server.ssl.key-password=secret
