--- a/iqueue/src/main/resources/application.properties
+++ b/iqueue/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.url=${IQUEUE_DB_URL}
 spring.datasource.username=${IQUEUE_DB_USER}
 spring.datasource.password=${IQUEUE_DB_PASSWORD}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 server.port=8443
 server.ssl.enabled=true
