SQL Stored Procedures deleted, LogEntryController implemented and EmailService implemented

--- a/iqueue/src/main/resources/application.properties
+++ b/iqueue/src/main/resources/application.properties
@@ -10,3 +10,9 @@ server.ssl.enabled=true
 server.ssl.key-store=classpath:server.jks
 server.ssl.key-store-password=secret
 server.ssl.key-password=secret
+
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=740eeba8b5ae30
+spring.mail.password=5b5b886160622c
+spring.mail.tls=true
