--- a/iqueue/src/main/resources/application.properties
+++ b/iqueue/src/main/resources/application.properties
@@ -5,11 +5,11 @@ spring.datasource.password=${IQUEUE_DB_PASSWORD}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-server.port=8443
-server.ssl.enabled=true
-server.ssl.key-store=classpath:server.jks
-server.ssl.key-store-password=secret
-server.ssl.key-password=secret
+#server.port=8443
+#server.ssl.enabled=true
+#server.ssl.key-store=classpath:server.jks
+#server.ssl.key-store-password=secret
+#server.ssl.key-password=secret
 
 spring.mail.host=smtp.mailtrap.io
 spring.mail.port=2525
