Some hardcoded values removed. Email settings moved to environment variables.

--- a/iqueue/src/main/resources/application.properties
+++ b/iqueue/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 #server.ssl.key-store-password=secret
 #server.ssl.key-password=secret
 
-spring.mail.host=smtp.mailtrap.io
-spring.mail.port=2525
-spring.mail.username=740eeba8b5ae30
-spring.mail.password=5b5b886160622c
+spring.mail.host=${IQUEUE_EMAIL_HOST}   
+spring.mail.port=${IQUEUE_EMAIL_PORT}   
+spring.mail.username=${IQUEUE_EMAIL_USERNAME}   
+spring.mail.password=${IQUEUE_EMAIL_PASSWORD}   
 spring.mail.tls=true
