Email server variables from environment. Optimizations and fixes.

--- a/iqueue/src/main/resources/application.properties
+++ b/iqueue/src/main/resources/application.properties
@@ -5,14 +5,14 @@ spring.datasource.password=${IQUEUE_DB_PASSWORD}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-#server.port=8443
-#server.ssl.enabled=true
-#server.ssl.key-store=classpath:server.jks
-#server.ssl.key-store-password=secret
-#server.ssl.key-password=secret
+server.port=8443
+server.ssl.enabled=true
+server.ssl.key-store=classpath:server.jks
+server.ssl.key-store-password=secret
+server.ssl.key-password=secret
 
-spring.mail.host=${IQUEUE_EMAIL_HOST}   
-spring.mail.port=${IQUEUE_EMAIL_PORT}   
-spring.mail.username=${IQUEUE_EMAIL_USERNAME}   
-spring.mail.password=${IQUEUE_EMAIL_PASSWORD}   
+spring.mail.host=${IQUEUE_EMAIL_HOST}
+spring.mail.port=${IQUEUE_EMAIL_PORT}
+spring.mail.username=${IQUEUE_EMAIL_USERNAME}
+spring.mail.password=${IQUEUE_EMAIL_PASSWORD}
 spring.mail.tls=true
