--- a/iqueue/src/main/resources/application.properties
+++ b/iqueue/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 
 server.port=8443
 server.ssl.enabled=true
+server.ssl.enabled-protocols=TLSv1.2
 server.ssl.key-store=classpath:server.jks
 server.ssl.key-store-password=secret
 server.ssl.key-password=secret
