--- a/Postman/IQueue Project.postman_collection.json
+++ b/Postman/IQueue Project.postman_collection.json
@@ -71,7 +71,7 @@
 						],
 						"body": {
 							"mode": "raw",
-							"raw": "{\n\t\"languageId\": {{languageId}},\n\t\"languageDescription\": \"Chinese\"\n}"
+							"raw": "{\n\t\"languageId\": {{languageId}},\n\t\"languageDescription\": \"ch\"\n}"
 						},
 						"url": {
 							"raw": "https://localhost:8443/api/iqueue/language",
@@ -254,7 +254,7 @@
 						"header": [],
 						"body": {
 							"mode": "raw",
-							"raw": "{\n\t\"languageDescription\": \"Japanese\"\n}",
+							"raw": "{\n\t\"languageDescription\": \"jp\"\n}",
 							"options": {
 								"raw": {
 									"language": "json"
@@ -3505,7 +3505,7 @@
 									"    pm.expect(jsonObject.startWaitingDateTime).to.eql(\"2020-04-10T20:00:00\")",
 									"    ",
 									"    pm.expect(jsonObject).to.have.property('attendanceStatusId')",
-									"    pm.expect(jsonObject.attendanceStatusId).to.eql(1)",
+									"    pm.expect(jsonObject.attendanceStatusId).to.eql(3)",
 									"    ",
 									"    pm.expect(jsonObject).to.have.property('startAttendanceDateTime')",
 									"    pm.expect(jsonObject.startAttendanceDateTime).to.eql(\"2020-04-10T20:10:00\")",
@@ -3526,7 +3526,7 @@
 						"header": [],
 						"body": {
 							"mode": "raw",
-							"raw": "{\t\n\t\"serviceQueueId\": {{serviceQueueId}},\n\t\"deskId\": {{deskId}},\n\t\"clientId\": {{userId}},\n\t\"startWaitingDateTime\": \"2020-04-10T20:00:00\",\n\t\"startAttendanceDateTime\": \"2020-04-10T20:10:00\",\n\t\"endAttendanceDateTime\": \"2020-04-10T20:15:00\",\n\t\"attendanceStatusId\": 1\n}\n",
+							"raw": "{\t\n\t\"serviceQueueId\": {{serviceQueueId}},\n\t\"deskId\": {{deskId}},\n\t\"clientId\": {{userId}},\n\t\"startWaitingDateTime\": \"2020-04-10T20:00:00\",\n\t\"startAttendanceDateTime\": \"2020-04-10T20:10:00\",\n\t\"endAttendanceDateTime\": \"2020-04-10T20:15:00\",\n\t\"attendanceStatusId\": 3\n}\n",
 							"options": {
 								"raw": {
 									"language": "json"
